랭스미스 추가

--- a/prompts/pdf-rag.yaml
+++ b/prompts/pdf-rag.yaml
@@ -6,13 +6,12 @@ template: |
   제공된 모든 문서별로 “문서명: 답변 내용 (출처: p.XX)” 형태로 상세히 답변하세요.
 
   1) 원문 질문  
-  Q{번호}) {question}
+  {question}
 
   2) 영어 번역 질문  
-  Q{번호}(EN) {question}를 영어로 번역한 문장
+  {question}를 영어로 번역한 문장
 
   3) 답변  
-  A{번호})
   - 문서A: … (출처: p.12)  
   - 문서B: … (출처: p.45)  
   …  
